Also write CSS and assets to xdg-config/gtk-4.0

The GTK4 version of Breeze doesn't inherit color scheme at all without this.

BUG: 448675
FIXED-IN: 5.26